--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "inrl",
-  "description": "",
+  "name": "BLACK-CYBER-MD",
+  "description": "The Official Best Whats App Bot",
   "keywords": [],
   "stack": "container",
   "env": {
